# fcwt2

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  justfile  pyproject.toml  readme.md  rust-toolchain.toml
.github/workflows/: ci.yml  python-release.yml
benches/: cwt.rs
examples/: wavelet_packet_denoiser.rs
notebooks/: fcwt2_discrete_wavelets.ipynb  fcwt2_python_wavelet_packet_denoiser.ipynb  fcwt2_visualizations.ipynb  fcwt2_wavelet_basis_selection.ipynb
src/: basis_selection.rs  discrete.rs  dual_tree_complex.rs  fcwt.rs  filter_bank.rs  lib.rs  morlet.rs  python.rs  scales.rs  stationary.rs  wavelet.rs  wavelet_packet.rs
