[package]
name = "fcwt2"
version = "1.1.0"
edition = "2024"
description = "Rust implementation of the fast Continuous Wavelet Transform"
license = "Apache-2.0"
documentation = "https://docs.rs/fcwt2"
homepage = "https://github.com/RustedBytes/fcwt2"
repository = "https://github.com/RustedBytes/fcwt2"

[lib]
name = "fcwt2"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.29.0", optional = true, features = ["abi3-py38", "extension-module"] }
rustfft = "6.4.1"

[dev-dependencies]
approx = "0.5"
criterion = "0.8.2"

[[bench]]
name = "cwt"
harness = false
