[build-system]
requires = ["maturin>=1.10,<2"]
build-backend = "maturin"

[project]
name = "fcwt2"
version = "1.2.0"
description = "Python bindings for the Rust fCWT implementation"
authors = [
    { name = "Yehor Smoliakov", email = "egorsmkv@gmail.com" },
]
readme = "readme.md"
requires-python = ">=3.8"
license = "Apache-2.0"

[tool.maturin]
features = ["python"]
module-name = "fcwt2"
